Fix header overlaping hero-second banner on home for veriton

--- a/wp-content/themes/protherics/front/src/scss/layout/_page.scss
+++ b/wp-content/themes/protherics/front/src/scss/layout/_page.scss
@@ -23,14 +23,12 @@
     }
 }
 
-.l-body.home .l-page {
-    &:not(.veriton) {
+.l-body.home:not(.veriton) .l-page {
         @include media(desktop-small) {
             position: relative;
 
             padding-top: 0;
         }
-    }
 }
 
 .l-body.home .l-page::before {
